<resources>
    <string name="app_name">EzClassApp</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="searchbar_hint">Type to search for classes...</string>
    <string name="send_to">Send to?</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="string_settings">Settings</string>
    <string name="string_logout">Log out</string>
    <string name="create_class">Create class</string>
    <string name="course_name">Course name</string>
    <string name="course_number">Course number</string>
    <string name="create">Create</string>
    <string name="dummy_detailed_review">dummy_detailed_reviews</string>
    <string name="alert_box_comment">Enter comment here...</string>
    <string name="alert_box_submit_btn">Submit</string>
    <string name="alert_box_cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Enter your email address...</string>
    <string name="tips_label">Tips:</string>
    <string name="opinion_label">Opinion:</string>
    <string name="like_button">like button</string>
    <string name="dislike_button">dislike button</string>
    <string name="profile_picture">profile picture</string>
    <string name="user_profile_karma">Karma</string>
    <string name="user_profile_post">Posts</string>
    <string name="submit_review_post_as_anonymous">Post as Anonymous</string>
    <string name="none">None</string>
    <string name="profile">Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="change_major">Change Major</string>
    <string name="difficulty">Hard:</string>
    <string name="usefulness">Helpful:</string>
    <string name="comments">Comments</string>
</resources>
