<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/string_settings" />
        <item
            android:id="@+id/menu_item_onSignout"
            android:checked="false"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/string_logout" />
        <item
            android:id="@+id/menu_create_class"
            android:checked="false"
            android:icon="@drawable/default_avatar"
            android:title="@string/create_class" />

        <item
            android:id="@+id/menu_detailed_review"
            android:checked="false"
            android:icon="@drawable/default_avatar"
            android:title="@string/dummy_detailed_review"
            android:visible="false" />
    </group>
</menu>