<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:alpha="0.87"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/none" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/none" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_image"
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/default_avatar"
                app:civ_border_color="@color/material_white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/settings_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings_user_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="11"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_border_top"
            android:baselineAligned="false"
            android:gravity="center"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:id="@+id/settings_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_post"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/settings_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:id="@+id/settings_karma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_karma"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/settings_karma_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_border_top"
            android:minHeight="0dp" />

        <TextView
            android:id="@+id/settings_show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:gravity="center_vertical"
            android:minHeight="32dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settings_show_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:gravity="center_vertical"
            android:minHeight="32dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settings_change_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_edit_black_24dp"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/ic_description_black_24dp"
            android:gravity="center_vertical"
            android:minHeight="32dp"
            android:text="@string/change_major"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settings_change_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_edit_black_24dp"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/ic_photo_camera_black_24dp"
            android:gravity="center_vertical"
            android:minHeight="32dp"
            android:text="@string/change_profile_picture"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>